Z-Index Tab Fix

--- a/src/jquery.magicBootTabs.css
+++ b/src/jquery.magicBootTabs.css
@@ -29,6 +29,7 @@
   border: none;
   color: #999;
   margin: 0;
+  z-index: 1;
 }
 .nav-tabs > li.active > a {
   border: none;
